[package]
name = "dlt-subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autoincrement = { version = "1", features = ["derive", "async"] }
libdlt-sys = "0.1.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
