[package]
name = "dlt-tracing-subscriber"
version = "0.1.2"
edition = "2021"
authors = ["Sojan James <Sojan.James@gmail.com>"]
description = "Tracing subscriber for COVESA DLT"
homepage = "https://github.com/sabaton-rs/dlt-tracing-subscriber"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autoincrement = { version = "1", features = ["derive", "async"] }
libdlt-sys = "0.1.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
